flux/manifests/04-apps/media/servers/plex/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: plex
  labels:
    name: plex
