flux/manifests/04-apps/media/servers/plex/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: plex-gateway
  namespace: cilium-system
  annotations:
    io.cilium/lb-ipam-ips: "10.100.1.98"
    service.cilium.io/loadbalancer-mode: "hybrid"
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "10.100.1.98"
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: plex-services-apocrathia-com-tls
            namespace: plex
      allowedRoutes:
        namespaces:
          from: All
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex-http-redirect
  namespace: cilium-system
spec:
  parentRefs:
    - name: plex-gateway
      namespace: cilium-system
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: plex-plex-services-apocrathia-com-tls
  namespace: plex
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium-system
  to:
    - group: ""
      kind: Secret
      name: plex-services-apocrathia-com-tls
